--- a/azura/dockerfile
+++ b/azura/dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.10-slim-buster
 WORKDIR /core
-RUN apt-get -y update
+RUN apt-get -y update --fix-missing
 RUN apt-get -y install python3-dev
 COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
