⬆️ Bump docker, make Redis asynchronous
+ Redis database now asynchronous.
+ Database performance fixes
+ Updated image to Bookworm
+ Added To-Do sections
+ Removed useless dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # Azura unverified (unsafe) code
-*.disabled
-/modules/playground.py
+*-test.py
 # Disable sensitive information
 /dev-compose.yml
 # Byte-compiled / optimized / DLL files
