--- a/azura/dockerfile
+++ b/azura/dockerfile
@@ -1,6 +1,7 @@
-FROM python:3.13-rc-slim-bookworm
+FROM python:3.10-slim-buster
 WORKDIR /core
-RUN apt update -y && apt upgrade -y && apt install cargo -y
+RUN apt-get -y update --fix-missing
+RUN apt-get -y install python3-dev
 COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
 COPY . .
